--- a/composer.json
+++ b/composer.json
@@ -18,9 +18,7 @@
         "laravel/sail": "^1.0.1",
         "mockery/mockery": "^1.4.2",
         "nunomaduro/collision": "^5.0",
-        "phpunit/phpunit": "^9.3.3",
-        "psalm/plugin-laravel": "^1.5",
-        "vimeo/psalm": "^4.9"
+        "phpunit/phpunit": "^9.3.3"
     },
     "autoload": {
         "psr-4": {
